--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  dio: ^5.8.0+1
+  dio: ^5.9.0
   flutter_native_splash: ^2.4.6
   intl_phone_number_input: ^0.7.4
   intl: ^0.20.2
@@ -70,6 +70,8 @@ dependencies:
   url_launcher: ^6.3.2
   getwidget: ^6.0.0
   flutter_secure_storage: ^9.2.4
+  cookie_jar: ^4.0.8
+  dio_cookie_manager: ^3.3.0
 
 dev_dependencies:
   flutter_test:
