--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: bogoballers
 description: "BogoBallers"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -72,6 +72,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.3.0
+  dropdown_search: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -90,7 +91,6 @@ flutter_launcher_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -98,10 +98,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - .env
-      - assets/fonts/
-      - assets/images/
-      - assets/json/
+    - .env
+    - assets/fonts/
+    - assets/images/
+    - assets/json/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
