--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.3.0
   dropdown_search: ^6.0.2
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
