--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ dependencies:
   dio_cookie_manager: ^3.3.0
   dropdown_search: ^6.0.2
   dartz: ^0.10.1
+  webview_flutter: ^4.13.0
+  webview_flutter_wkwebview: ^3.23.0
 
 dev_dependencies:
   flutter_test:
