--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -15,6 +15,8 @@
 			<key>NSAllowsArbitraryLoads</key>
 			<true/>
 		</dict>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>This app needs access to your photo library to select and upload images.</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundleName</key>
